<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Fussball Regelfragen</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- titles -->
    <string name="title_singleQuestion">Single Question</string>
    <string name="title_exam">Exam</string>
    <string name="title_evaluated_exam">Evaluation</string>
    <string name="title_settings">Settings</string>

    <!-- startup -->
    <string name="noQuestionsDialogTitle">No questions yet</string>
    <string name="noQuestionsDialogMessage">You don\'t have any questions downloaded so far. The app won\'t work without questions. Do you want to download them now?</string>
    <string name="noQuestionsDialogExit">Exit</string>
    <string name="noQuestionsDialogDownload">Download</string>
    <string name="loadingProgressTitle">Loading questions</string>
    <string name="loadingProgressMessage">Please wait</string>
    <string name="loadUnsuccessfulTitle">Unsuccessful</string>
    <string name="loadUnsuccessfulMessage">An error occurred while loading questions. Please try again later.</string>

    <!-- questions -->
    <string name="restartMethod">Restart method</string>
    <string name="positionOfRestart">Position of restart</string>
    <string name="disciplinarySanction">Disciplinary sanction</string>
    <string name="solution">Solution</string>
    <string name="faults">Faults</string>
    <string name="nextButton">Next</string>
    <string name="backButton">Back</string>
    <string name="handInButton">Hand in</string>
    <string name="solveButton">Solve</string>
    <string name="newQuestionButton">New question</string>
    <string name="default_server">Default server</string>
    <string name="noMoreQuestionsTitle">No more questions</string>
    <string name="noMoreQuestionsMessage">You answered all questions. Please click \'OK\' and the questions will be shuffled again.</string>
    <string name="showExplanation">Explanation</string>
    <string name="wrongSolution">Wrong solution?</string>

    <!-- exam -->
    <string name="examProgressText">Question %1$s of %2$s</string>
    <string name="handInDialogTitle">Hand In</string>
    <string name="handInDialogMessage">Are you sure you want to hand in this exam? You won\'t be able to edit your answers afterwards.</string>
    <string name="exitExamDialogTitle">Exit Exam</string>
    <string name="exitExamDialogMessage">Are you sure you want to exit this exam? Once you leave you won\'t be able to come back and have to start from scratch.</string>
    <string name="timeElapsedDialogTitle">Time\'s up</string>
    <string name="timeElapsedDialogMessage">The time for this exam has elapsed. However, you can still choose if you want to hand in this exam or not.</string>
    <string name="timeElapsedDialogContinueButton">Continue</string>
    <string name="timeElapsedDialogHandInButton">@string/handInButton</string>

    <!-- assessed exam -->
    <string name="questionWithNumber">Question %1$s</string>

    <string name="OK">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Settings -->
    <string name="pref_category_general">General</string>
    <string name="pref_positionOfRestart">Position of restart</string>
    <string name="pref_positionOfRestart_active">Test position of restart</string>
    <string name="pref_positionOfRestart_not_active">Don\'t test position of restart</string>
    <string name="pref_key_positionOfRestart_active" translatable="false">pref_key_positionOfRestart_active</string>
    <string name="pref_statistics">Statistic</string>
    <string name="pref_stats_active">Create statistics</string>
    <string name="pref_stats_not_active">Don\'t create statistics</string>
    <string name="pref_key_statistics_active" translatable="false">pref_key_statistics_active</string>
    <string name="pref_category_difficulty">Difficulty</string>
    <string name="pref_limit_difficulties">Limit difficulties</string>
    <string name="pref_limit_difficulties_on">only selected levels</string>
    <string name="pref_limit_difficulties_off">all levels</string>
    <string name="pref_key_limit_difficulties" translatable="false">pref_key_limit_difficulties</string>
    <string name="pref_limit_difficulties_aspirant">Aspirant</string>
    <string name="pref_key_aspirant_active" translatable="false">pref_key_aspirant_active</string>
    <string name="pref_limit_difficulties_normal">Normal</string>
    <string name="pref_key_normal_active" translatable="false">pref_key_normal_active</string>

</resources>
