<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/pref_category_general"
        android:key="pref_key_general_settings">
        <CheckBoxPreference
            android:key="@string/pref_key_positionOfRestart_active"
            android:title="@string/pref_positionOfRestart"
            android:summaryOn="@string/pref_positionOfRestart_active"
            android:summaryOff="@string/pref_positionOfRestart_not_active"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_key_statistics_active"
            android:title="@string/pref_statistics"
            android:summaryOn="@string/pref_stats_active"
            android:summaryOff="@string/pref_stats_not_active"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_difficulty"
        android:key="pref_key_difficulty">
        <CheckBoxPreference
            android:key="@string/pref_key_limit_difficulties"
            android:title="@string/pref_limit_difficulties"
            android:summaryOn="@string/pref_limit_difficulties_on"
            android:summaryOff="@string/pref_limit_difficulties_off"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="@string/pref_key_anwaerter_active"
            android:title="@string/pref_limit_difficulties_aspirant"
            android:dependency="pref_key_limit_difficulties"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_key_normal_active"
            android:title="@string/pref_limit_difficulties_normal"
            android:dependency="pref_key_limit_difficulties"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>