<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/heading_restartMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restartMethod" />

    <Spinner
        android:id="@+id/spinner_restartMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_restartMethod"
        android:drawSelectorOnTop="true"
        android:prompt="@string/restartMethod"
        android:text="@string/restartMethod" />

    <TextView
        android:id="@+id/heading_positionOfRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_restartMethod"
        android:layout_marginTop="10dp"
        android:text="@string/positionOfRestart" />

    <Spinner
        android:id="@+id/spinner_positionOfRestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_positionOfRestart"
        android:drawSelectorOnTop="true"
        android:prompt="@string/positionOfRestart"
        android:text="@string/positionOfRestart" />

    <TextView
        android:id="@+id/heading_disciplinarySanction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_positionOfRestart"
        android:layout_marginTop="10dp"
        android:text="@string/disciplinarySanction" />

    <Spinner
        android:id="@+id/spinner_disciplinarySanction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_disciplinarySanction"
        android:drawSelectorOnTop="true"
        android:prompt="@string/positionOfRestart"
        android:text="@string/positionOfRestart" />

</RelativeLayout>
