<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/restartMethod" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/solution" />

        <View
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/restartMethod_chosen"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textColor="@color/abc_primary_text_material_light" />

        <TextView
            android:id="@+id/restartMethod_solution"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scrollbars="none"
            android:textColor="@color/abc_primary_text_material_light" />

        <ImageView
            android:id="@+id/restartMethod_correct"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/positionOfRestart" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/solution" />
        <View
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/positionOfRestart_chosen"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textColor="@color/abc_primary_text_material_light" />

        <TextView
            android:id="@+id/positionOfRestart_solution"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scrollbars="none"
            android:textColor="@color/abc_primary_text_material_light" />

        <ImageView
            android:id="@+id/positionOfRestart_correct"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/disciplinarySanction" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/solution" />

        <View
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/disciplinarySanction_chosen"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textColor="@color/abc_primary_text_material_light" />

        <TextView
            android:id="@+id/disciplinarySanction_solution"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:scrollbars="none"
            android:textColor="@color/abc_primary_text_material_light" />

        <ImageView
            android:id="@+id/disciplinarySanction_correct"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </TableRow>

</TableLayout>
